probando diferentes configuraciones